# flutterware

./: .gitignore  .pubignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  analysis_options.yaml  flutter_version  pubspec.yaml  steps.txt  vendor.yaml
.github/workflows/: analyze-and-test.yaml
app/: .gitignore  pubspec.yaml
app/lib/: main.dart  main_dev.dart  main_embedder_dev.dart  main_scenario.dart  main_scenario_web.dart  main_test_runner_web.dart
app/native/: CMakeLists.txt  host.c  input.c  input.h  ipc.c  ipc.h  surface.c  surface.h  surface.m
app/test/: dependencies_test.dart
app/windows/: CMakeLists.txt
doc/: app_tests.md
docs/superpowers/: tui-roadmap.md
embedder/: .gitignore  README.md  pubspec.yaml
embedder/lib/: compiler.dart
embedder/native/: host.c
embedder/test/: compiler_test.dart  flutter_cache_test.dart  pipeline_test.dart
embedder/tool/: run.dart
example/: high_level_api_test.dart  low_level_api_test.dart  main.dart
examples/example/: README.md  pubspec.yaml
hooks/: pre-commit
lib/: devbar.dart  drawing.dart  feature_flag.dart  flutter_test.dart  internal.dart  router_outlet.dart  ui_book.dart  ui_catalog.dart  widget_book.dart
lib/devbar_plugins/: device_frame.dart  log_analytics.dart  log_network.dart  logger.dart  variables.dart
lib/internals/: constants.dart  log.dart  logger.dart  remote_log.dart  remote_log_adapter.dart  terminal.dart  test_runner.dart  test_runner_daemon.dart  utils.dart  web.dart
lib/src/: constants.dart  test_runner.dart  test_runner_daemon.dart  web.dart
test_app/: example_test.dart
tool/: format_pre_commit.dart  fw  install_hooks.dart  prepare_submit.dart  pub_get_all_projects.dart  pub_upgrade_all_projects.dart
(+604 files in other folders)
